fix crash with older Qt

hide after the stuff got constructed

BUG: 493060